--- a/BooksDiary/app/src/main/res/layout/activity_main.xml
+++ b/BooksDiary/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorStart"
     tools:context=".MainActivity"
-    android:padding="15dp">
+    >
 
     <TextView
         android:layout_width="250dp"
@@ -16,13 +16,14 @@
         android:text="Welcome to your Book-Diary!"
         android:textSize="30dp"
         android:textAlignment="center"
+        android:textStyle="bold"
         android:textColor="@color/colorPrimary"
-        app:layout_constraintBottom_toTopOf="@id/image_main_activity"
+        app:layout_constraintBottom_toTopOf="@id/main_activity_image"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
     
     <ImageView
-        android:id="@+id/image_main_activity"
+        android:id="@+id/main_activity_image"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:src="@mipmap/ic_bookworm"
@@ -31,4 +32,77 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         />
+
+    <Button
+        android:id="@+id/main_activity_login_button"
+        android:layout_width="250dp"
+        android:layout_height="40dp"
+        android:text="LOGIN"
+        android:fontFamily="@font/almendra_display"
+        android:textStyle="bold"
+        android:textColor="@color/colorPrimaryDark"
+        app:layout_constraintTop_toBottomOf="@id/main_activity_image"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/button_rounded"
+        />
+
+    <Button
+        android:id="@+id/main_activity_register_button"
+        android:layout_width="250dp"
+        android:layout_height="40dp"
+        android:text="REGISTER"
+        android:fontFamily="@font/almendra_display"
+        android:textStyle="bold"
+        android:textColor="@color/colorPrimaryDark"
+        app:layout_constraintTop_toBottomOf="@id/main_activity_do_not_have_account_text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/button_rounded"
+        />
+
+    <RelativeLayout
+        android:id="@+id/main_activity_do_not_have_account_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        app:layout_constraintTop_toBottomOf="@id/main_activity_login_button"
+        android:layout_marginTop="20dp">
+
+        <TextView
+            android:id="@+id/tvText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:text="Don't have an account?"
+            android:textColor="@color/colorPrimary"
+            android:fontFamily="@font/almendra_display"
+            android:textStyle="bold"
+            android:textSize="15dp"
+            />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="16dp"
+            android:layout_toLeftOf="@id/tvText"
+            android:background="@color/colorPrimaryDark"
+            />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="16dp"
+            android:layout_toRightOf="@id/tvText"
+            android:background="@color/colorPrimaryDark"
+            />
+
+    </RelativeLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
