--- a/BooksDiary/app/src/main/res/values/colors.xml
+++ b/BooksDiary/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="colorPrimary">#ffcce6</color>
     <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorAccent">#ff4da9</color>
     <color name="colorStart">#2ca58f</color>
 </resources>
